attempt to fix images not being responsive on mobile

--- a/client/style.css
+++ b/client/style.css
@@ -142,6 +142,7 @@ code {
   margin-top: -1px;
   border-radius: 2px;
   background: #fff;
+  width: 100%;
 }
 
 .message:focus, .message:hover {
